--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@nano-sql/core",
-	"version": "2.2.9",
+	"version": "2.3.0",
 	"description": "Like Lego For Databases",
 	"main": "lib/index-node.js",
 	"browser": "lib/index.js",
@@ -9,7 +9,7 @@
 		"rollup-test": "rollup -c",
 		"serve": "webpack-dev-server --mode=development",
 		"bundle": "webpack -p --display-modules && webpack -p --es5 --display-modules",
-		"release": "bash release.sh",
+		"release": "npm run test && bash release.sh",
 		"test": "mocha -r ts-node/register tests/index.ts",
 		"lint": "tslint -p ./tsconfig.json \"./src/**/*.ts\""
 	},
