--- a/packages/Plugin-Search/package.json
+++ b/packages/Plugin-Search/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@nano-sql/plugin-fuzzy-search",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Integrate Elastic Search style indexing in NanoSQL 2!",
   "main": "lib/index.js",
   "scripts": {
     "test": "ts-node src/test",
-    "build": "tsc"
+    "build": "./build.sh"
   },
   "repository": {
     "type": "git",
@@ -13,7 +13,19 @@
   },
   "typings": "lib/index.d.ts",
   "homepage": "https://nanosql.io/",
-  "keywords": [],
+  "keywords": [
+    "fuzzy",
+    "elastic",
+    "elastic search",
+    "elasticsearch",
+    "lucene",
+    "search",
+    "text search",
+    "fuzzy search",
+    "document search",
+    "document index",
+    "text index"
+  ],
   "author": "Scott Lott <Scott@ClickSimply.com>",
   "license": "MIT",
   "dependencies": {
@@ -21,10 +33,10 @@
     "stemmer": "^1.0.3"
   },
   "peerDependencies": {
-    "@nano-sql/core": "^2.2.9"
+    "@nano-sql/core": "^2.3.1"
   },
   "devDependencies": {
-    "@nano-sql/core": "^2.2.9",
+    "@nano-sql/core": "^2.3.1",
     "@types/node": "^12.0.0",
     "ts-loader": "^6.0.0",
     "typescript": "^3.4.5",
