--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "nano-sql",
-	"version": "1.8.3",
+	"version": "1.8.4",
 	"description": "NoSQL Everywhere",
 	"main": "lib/index-server.js",
 	"browser": "lib/index.js",
@@ -37,6 +37,7 @@
 		"typedoc": "^0.14.2",
 		"typescript": "3.3.4000",
 		"uglify-js": "^3.5.1",
+		"uglifyjs-webpack-plugin": "^2.1.3",
 		"webpack": "^4.29.6",
 		"webpack-cli": "^3.3.0",
 		"webpack-node-externals": "^1.7.2",
