--- a/packages/Core/package.json
+++ b/packages/Core/package.json
@@ -40,6 +40,7 @@
 		"sqlite3": "^4.0.9",
 		"stoppable": "^1.1.0",
 		"ts-loader": "^6.0.4",
+		"ts-node": "^8.3.0",
 		"tslint": "^5.18.0",
 		"typescript": "^3.5.3",
 		"uglifyjs-webpack-plugin": "^2.1.3",
