--- a/packages/Query-GraphQL/package.json
+++ b/packages/Query-GraphQL/package.json
@@ -11,13 +11,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^10.12.18",
+    "@types/pluralize": "0.0.29",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   },
   "dependencies": {
     "@apollo/federation": "^0.16.0",
-    "@nano-sql/core": "^2.2.4",
+    "@nano-sql/core": "^2.3.7",
     "apollo-server": "^2.13.1",
-    "apollo-server-core": "^2.13.1"
+    "apollo-server-core": "^2.13.1",
+    "fast-deep-equal": "^3.1.1",
+    "levenshtein-edit-distance": "^2.0.5",
+    "pluralize": "^8.0.0",
+    "really-small-events": "^1.1.0"
   }
 }
